# unstructured-api

./: .gitignore  =2.12.2  CHANGELOG.md  Dockerfile  Dockerfile-amd64  Dockerfile-arm64  Dockerfile-small  Dockerfile-test  Makefile  README.md  logger_config.yaml  openapi.json  preprocessing-pipeline-family.yaml  pyproject.toml  renovate.json  renovate.json5  setup.cfg  unstructuredio_api.py  unstructuredio_api.spec
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump_libraries.yaml  ci.yml  claude.yml  codeql-analysis.yml  docker-publish.yml  version-bump.yml
docker/rockylinux-9.4/: Dockerfile
docs/: Windows.md
exploration-notebooks/: exploration-email.ipynb  exploration-emails.ipynb  exploration-general.ipynb  exploration-html.ipynb  exploration-powerpoint.ipynb  pipeline-emails.ipynb
pipeline-notebooks/: pipeline-email.ipynb  pipeline-emails.ipynb  pipeline-general.ipynb  pipeline-hello-world.ipynb
prepline_documents/api/: document.py  general.py
prepline_emails/api/: app.py  email.py  general.py  hello_world.py
prepline_general/: __version__.py
prepline_general/api/: __version__.py  app.py  debug.py  endpoints.py  events.py  filetypes.py  general.py  logging.py  memory_protection.py  openapi.py  utils.py  validation.py
prepline_general/api/models/: form_params.py
requirements/: base.in  base.txt  constraints.in  constraints.txt  dev.in  dev.txt  test.in  test.txt  win-base.txt
sample-docs/: 1.eml  ANNOUNCEMENT_ The holidays are coming.eml  alert.eml  announcement.eml  fake-power-point-extra.pptx  fake-xml.xml  family-day.eml  family_day.eml  notes.ppt  notes.pptx
scripts/: app-start.sh  check-and-format-notebooks.py  docker-build.sh  docker-smoke-test.sh  install-pandoc.sh  maybe-pull-chipper.sh  parallel-mode-test.sh  renovate-security-bump.sh  smoketest.py  test-doc-pipeline-apis-consistent.sh  version-increment.sh  version-sync.sh
test_documents/api/: test_app.py
test_emails/api/: test_app.py
test_general/: test_utils.py
test_general/api/: test_app.py  test_deprecated_api.py  test_general.py  test_gzip.py  test_utils.py
test_scripts/: test_app.py
