[project]
name = "prepline-general"
dynamic = ["version"]
description = "Unstructured API for document processing"
requires-python = ">=3.12"
dependencies = [
    "unstructured[all-docs] >=0.18.31, <1.0.0",
    "fastapi >=0.128.4, <1.0.0",
    "uvicorn >=0.40.0, <1.0.0",
    "backoff >=2.2.1, <3.0.0",
    "pandas >=3.0.0, <4.0.0",
    "psutil >=7.0.0, <8.0.0",
    "pypdf >=6.0.0, <7.0.0",
    "requests >=2.32.0, <3.0.0",
]

[dependency-groups]
lint = [
    "ruff >=0.15.0, <1.0.0",
    "mypy >=1.19.1, <2.0.0",
    "types-requests >=2.32.4, <3.0.0",
]
test = [
    {include-group = "lint"},
    "pytest >=9.0.2, <10.0.0",
    "pytest-cov >=7.0.0, <8.0.0",
    "pytest-mock >=3.15.1, <4.0.0",
    "pytest-xdist >=3.8.0, <4.0.0",
    "httpx >=0.28.1, <1.0.0",
    "deepdiff >=8.6.1, <9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "prepline_general/api/__version__.py"

[tool.uv]
# Constraints for transitive dependencies that need pinning for functional reasons
constraint-dependencies = [
    # later versions of Starlette break middleware
    "starlette==0.41.2",
    # pdfminer.six 20260107 includes performance fix
    "pdfminer-six==20260107",
]

[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportUnnecessaryCast = true
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
exclude = [
    "prepline_*/api",
]

[tool.ruff.lint]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "W",        # -- pycodestyle warnings --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
]
ignore = [
    "COM812",   # -- over aggressively insists on trailing commas where not desireable --
    "PT006",    # -- pytest.mark.parametrize string vs tuple style for arg names --
    "PT011",    # -- pytest.raises({exc}) too broad, use match param or more specific exception --
    "PT012",    # -- pytest.raises() block should contain a single simple statement --
    "PT014",    # -- duplicate parametrize test case --
    "PT015",    # -- assertion always fails, use pytest.fail() --
    "SIM115",   # -- use context manager for opening files (too noisy for test multipart patterns) --
    "SIM117",   # -- merge `with` statements for context managers that have same scope --
]

[tool.ruff.lint.isort]
known-first-party = [
    "unstructured",
    "unstructured_inference",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["test_general"]
